--- a/app/src/main/res/layout/main_fragment_layout.xml
+++ b/app/src/main/res/layout/main_fragment_layout.xml
@@ -7,8 +7,8 @@
     tools:context=".view.MainActivity">
 
     <com.google.android.material.card.MaterialCardView
-        style="@style/CardLayoutStyle"
         android:id="@+id/top_panel"
+        style="@style/CardLayoutStyle"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginBottom="16dp"
@@ -38,14 +38,14 @@
                 android:id="@+id/loading_bar"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:progress="85"
-                android:layout_gravity="center" />
+                android:layout_gravity="center"
+                android:progress="85" />
         </LinearLayout>
     </com.google.android.material.card.MaterialCardView>
 
     <com.google.android.material.card.MaterialCardView
-        style="@style/CardLayoutStyle"
         android:id="@+id/recycler_card"
+        style="@style/CardLayoutStyle"
         android:layout_width="0dp"
         android:layout_height="0dp"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -64,9 +64,11 @@
     <FrameLayout
         android:id="@+id/loading_layout"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="0dp"
         android:background="?colorOnPrimary"
         android:elevation="100dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/top_panel"
         tools:visibility="invisible">
 
         <com.google.android.material.progressindicator.CircularProgressIndicator
@@ -76,4 +78,20 @@
             android:layout_gravity="center"
             android:indeterminate="true" />
     </FrameLayout>
+
+    <FrameLayout
+        android:id="@+id/empty_layout"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:background="?colorOnPrimary"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/top_panel">
+
+        <com.google.android.material.textview.MaterialTextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:text="@string/no_data" />
+    </FrameLayout>
+
 </androidx.constraintlayout.widget.ConstraintLayout>
